# pyEchoNext

./: .buildinfo  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Doxyfile  README.md  SECURITY.md  code.py  docsconf.py  flake8-wps.py  format-code.py  genindex.html  i18n_locales.html  index.html  modules.html  mvc.html  objects.inv  permissions.html  py-modindex.html  pyechonext.apidoc_ui.html  pyechonext.auth.html  pyechonext.docsgen.html  pyechonext.html  pyechonext.i18n_l10n.html  pyechonext.logging.html  pyechonext.template_engine.html  pyechonext.utils.html  pyproject.toml  requests_responses.html  requirements.txt  routes_and_views.html  search.html  searchindex.js  security.html  webapp_creation.html  webframework_design.html
.doctrees/: environment.pickle  i18n_locales.doctree  index.doctree  modules.doctree  mvc.doctree  permissions.doctree  pyechonext.apidoc_ui.doctree  pyechonext.auth.doctree  pyechonext.docsgen.doctree  pyechonext.doctree  pyechonext.i18n_l10n.doctree  pyechonext.logging.doctree  pyechonext.template_engine.doctree  pyechonext.utils.doctree  requests_responses.doctree  routes_and_views.doctree  security.doctree  webapp_creation.doctree  webframework_design.doctree
.github/workflows/: docs.yml  python-package.yml  static.yml
_build/: .buildinfo
_build/.doctrees/: environment.pickle  i18n_locales.doctree  index.doctree  modules.doctree  mvc.doctree  permissions.doctree  pyechonext.apidoc_ui.doctree  pyechonext.auth.doctree  pyechonext.docsgen.doctree  pyechonext.doctree  pyechonext.i18n_l10n.doctree  pyechonext.logging.doctree  pyechonext.template_engine.doctree  pyechonext.utils.doctree  requests_responses.doctree  routes_and_views.doctree  security.doctree  webapp_creation.doctree  webframework_design.doctree
_modules/: index.html  pyechonext.html
_modules/pyechonext/: cache.html  permissions.html  utils.html
_sources/: mvc.rst.txt  permissions.rst.txt  pyechonext.apidoc_ui.rst.txt  pyechonext.logging.rst.txt  routes_and_views.rst.txt  security.rst.txt  webapp_creation.rst.txt  webframework_design.rst.txt
devguide/: hybrid_core.md
docs/: conf.py  i18n_locales.rst  index.rst  modules.rst  mvc.rst  permissions.rst  pyechonext.auth.rst  pyechonext.docsgen.rst  pyechonext.i18n_l10n.rst  pyechonext.rst  pyechonext.template_engine.rst  pyechonext.utils.rst  requests_responses.rst  routes_and_views.rst  security.rst  webapp_creation.rst  webframework_design.rst
docs/en/: i18n_locales.md  index.md  mvc.md  permissions.md  requests_responses.md  routes_and_views.md  security.md  webapp_creation.md  webframework_design.md
docs/ru/: article1.md  i18n_locales.md  index.md  mvc.md  permissions.md  requests_responses.md  routes_and_views.md  security.md  uidoc.md  webapp_creation.md  webframework_design.md
examples/: advanced_app.py  el_config.py  example_env  example_ini.ini  example_locale.py  example_module.py  modern.py  security.py  simple_api.py  simple_app.py  webapp.py
examples/__main__/: README.md
examples/locales/: RU_RU.json
examples/random_examples/: advanced_app.py  example_ini.ini  example_locale.py  example_module.py  hashing.py  modern.py  simple_api.py  simple_app.py  webapp.py
examples/simpleapi/: .gitignore  app.py
examples/static/: styles.css
examples/templates/: index.html
examples/webapp/: HACKING.md  README.md
pyechonext/: __init__.py  __main__.py  app.py  cache.py  config.py  middleware.py  permissions.py  request.py  response.py  static.py  urls.py  views.py
pyechonext/apidoc_ui/: api_documentation.py  ui.py
pyechonext/auth/: __init__.py
pyechonext/docsgen/: document.py  projgen.py
pyechonext/i18n/: locale.py
pyechonext/i18n_l10n/: i18n.py  (+1 more)
tests/: .coveragerc  defence.py  example.json  example.toml  example.yaml  example_env  example_ini.ini  permissions.py  test_all.py  test_app.py  test_cache.py  test_configuration.py  test_crypts.py  test_defence.py  test_hashing.py  test_locales.py  test_permissions.py  test_providers.py  test_responses.py  test_security.py  test_slugger.py  test_stack.py  test_static.py  test_static_files.py  test_trie.py
(+33 files in other folders)
