[project]
name = "pyechonext"
version = "0.8.0"
description = "EchoNext is a lightweight, fast and scalable web framework for Python"
authors = [{ name = "alexeev-prog", email = "alexeev.dev@mail.ru" }]
requires-python = ">=3.12,<4.0"
readme = "README.md"
license = "LGPL-2.1"
dependencies = [
    "rich>=14.0.0,<15",
    "gunicorn~=23.0",
    "pysocks~=1.7",
    "parse~=1.20",
    "jinja2~=3.1",
    "python-dotenv~=1.0",
    "toml>=0.10,<0.11",
    "pyyaml~=6.0",
    "requests~=2.32",
    "orjson~=3.9",
    "requests-wsgi-adapter>=0.4,<0.5",
    "echonextdi>=0.2.0,<0.3",
    "hermes-langlib>=0.1.4,<0.2",
    "pyjwt>=2.10.1,<3",
    "ty>=0.0.1a9,<0.0.2",
    "structlog>=25.4.0,<26",
    "tqdm>=4.67.1,<5",
    "pylint>=3.3.7,<4",
    "pyminideprecator>=0.1.0,<0.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0,<9",
    "black>=24.10.0,<25",
    "pylint~=3.3",
    "pytest-cov>=6.0.0,<7",
    "furo>=2024.8.6,<2025",
    "mypy>=1.15.0,<2",
    "wemake-python-styleguide>=1.1.0,<2",
    "flake8>=7.3.0,<8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[virtualenvs]
in-project = true
