[project]
name = "pyechonext"
version = "0.8.0"
description = "EchoNext is a lightweight, fast and scalable web framework for Python"
authors = [{ name = "alexeev-prog", email = "alexeev.dev@mail.ru" }]
requires-python = ">=3.12,<4.0"
readme = "README.md"
license = "LGPL-2.1"
dependencies = [
    "rich>=14.0.0,<15",
    "gunicorn~=23.0",
    "pysocks~=1.7",
    "parse~=1.20",
    "jinja2~=3.1",
    "python-dotenv~=1.0",
    "toml>=0.10,<0.11",
    "pyyaml~=6.0",
    "requests~=2.32",
    "orjson~=3.9",
    "requests-wsgi-adapter>=0.4,<0.5",
    "echonextdi>=0.2.0,<0.3",
    "hermes-langlib>=0.1.4,<0.2",
    "pyjwt>=2.10.1,<3",
    "ty>=0.0.1a9,<0.0.2",
    "structlog>=25.4.0,<26",
    "tqdm>=4.67.1,<5",
    "pylint>=3.3.7,<4",
    "pyminideprecator>=0.1.0,<0.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0,<9",
    "black>=24.10.0,<25",
    "pylint~=3.3",
    "pytest-cov>=6.0.0,<7",
    "furo>=2024.8.6,<2025",
    "mypy>=1.15.0,<2",
    "wemake-python-styleguide>=1.1.0,<2",
    "flake8>=7.3.0,<8",
]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.ruff.lint]
select = [
  "A",    # flake8-builtins
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "C90",  # maccabe
  "COM",  # flake8-commas
  "D",    # pydocstyle
  "DTZ",  # flake8-datetimez
  "E",    # pycodestyle
  "ERA",  # flake8-eradicate
  "EXE",  # flake8-executable
  "F",    # pyflakes
  "FBT",  # flake8-boolean-trap
  "FLY",  # pyflint
  "FURB", # refurb
  "G",    # flake8-logging-format
  "I",    # isort
  "ICN",  # flake8-import-conventions
  "ISC",  # flake8-implicit-str-concat
  "LOG",  # flake8-logging
  "N",    # pep8-naming
  "PERF", # perflint
  "PIE",  # flake8-pie
  "PL",   # pylint
  "PT",   # flake8-pytest-style
  "PTH",  # flake8-use-pathlib
  "Q",    # flake8-quotes
  "RET",  # flake8-return
  "RSE",  # flake8-raise
  "RUF",  # ruff
  "S",    # flake8-bandit
  "SIM",  # flake8-simpify
  "SLF",  # flake8-self
  "SLOT", # flake8-slots
  "T100", # flake8-debugger
  "TRY",  # tryceratops
  "UP",   # pyupgrade
  "W",    # pycodestyle
  "YTT",  # flake8-2020
]
ignore = [
  "A005",   # allow to shadow stdlib and builtin module names
  "COM812", # trailing comma, conflicts with `ruff format`
  # Different doc rules that we don't really care about:
  "D100",
  "D104",
  "D106",
  "D203",
  "D212",
  "D401",
  "D404",
  "D405",
  "ISC001",  # implicit string concat conflicts with `ruff format`
  "ISC003",  # prefer explicit string concat over implicit concat
  "PLR09",   # we have our own complexity rules
  "PLR2004", # do not report magic numbers
  "PLR6301", # do not require classmethod / staticmethod when self not used
  "TRY003",  # long exception messages from `tryceratops`
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[virtualenvs]
in-project = true
